syntax = "proto3";
package faultservice;

service FaultService {
    rpc Experiment (EmptyMsg) returns (stream InfoMsg) {
    }
}

message EmptyMsg {
}

message ExperimentReq {
    string svc = 1;
}

message InfoMsg {
    string info = 1;
}